<resources>
    <string name="app_name">PackBagBuddy</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="or">OR</string>
    <string name="todo">TODO</string>
    <string name="join_packbagbuddy">Join PackBagBuddy</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGNUP</string>
    <string name="skip">SKIP>>></string>
    <string name="horizontal_line"><hr></hr></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="create_one">Create One</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="explore_india">Explore India</string>
    <string name="create_tour">Create Tour</string>
    <string name="share_app">Share App</string>
    <string name="phone_number">Phone Number</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="adventure_trip">Adventure Trip</string>
    <string name="view_more">View More</string>
    <string name="popular_sports">Popular Sports</string>
    <string name="flat_discount">Flat Discount</string>
    <string name="zip_lining">Zip Lining</string>
    <string name="see_all">See All</string>
    <string name="facebook_com">facebook.com</string>
    <string name="find_us">Find Us</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="photos">Photos</string>
    <string name="campfire">Campfire</string>
    <string name="view_details">view details</string>
    <string name="title">Title</string>
    <string name="register">Register as Partner</string>
    <string name="city">City</string>
    <string name="web">Web</string>
    <string name="comp">Comp</string>
    <string name="website">Website</string>
    <string name="company_name">Company Name</string>
    <string name="company_description">Company Description</string>
    <string name="submit">Submit</string>
    <string name="reason">Reason</string>
    <string name="pay">Pay</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="at_packbagbuddy_we_re_all_about_ensuring_you_get_the_best_experience_you_can_through_your_tours">At PackBagBuddy, we’re all about ensuring you get the best experience you can through your tours.</string>
    <string name="privacy1">
        This privacy policy is for www.packbagbuddy.com and served by PackBagBuddy Travel Agency LLP and governs the privacy of its users who choose to use it.
\n \n
The policy sets out the different areas where user privacy is concerned and outlines the obligations &amp; requirements of the users, the website and website owners. Furthermore the way this website processes, stores and protects user data and information will also be detailed within this policy.
\n \n
<b>The Website</b>
        \n
This website and its owners take a proactive approach to user privacy and ensure the necessary steps are taken to protect the privacy of its users throughout their visiting experience. This website comply’s to all India’s national laws and requirements for user privacy.
\n \n
<b>Use of Cookies</b>
        \n
This website uses cookies to better the users experience while visiting the website. Where applicable this website uses a cookie control system allowing the user on their first visit to the website to allow or disallow the use of cookies on their computer / device. This complies with recent legislation requirements for websites to obtain explicit consent from users before leaving behind or reading files such as cookies on a user’s computer / device.
\n \n
Cookies are small files saved to the user’s computers hard drive that track, save and store information about the user’s interactions and usage of the website. This allows the website, through its server to provide the users with a tailored experience within this website. Users are advised that if they wish to deny the use and saving of cookies from this website on to their computers hard drive they should take necessary steps within their web browsers security settings to block all cookies from this website and its external serving vendors.
\n \n
This website uses tracking software to monitor its visitors to better understand how they use it. This software is provided by Google Analytics which uses cookies to track visitor usage. The software will save a cookie to your computers hard drive in order to track and monitor your engagement and usage of the website, but will not store, save or collect personal information. You can read Google’s privacy policy here for further information [ http://www.google.com/privacy.html ].
\n \n
Other cookies may be stored to your computers hard drive by external vendors when this website uses referral programs, sponsored links or adverts. Such cookies are used for conversion and referral tracking and typically expire after 30 days, though some may take longer. No personal information is stored, saved or collected.
\n \n
<b>Email Newsletter</b>
        \n
Although this website only looks to include quality, safe and relevant external links, users are advised to adopt a policy of caution before clicking any external web links mentioned throughout this website. (External links are clickable text / banner / image links to other websites.)
\n \n
The owners of this website cannot guarantee or verify the contents of any externally linked website despite their best efforts. Users should therefore note they click on external links at their own risk and this website and its owners cannot be held liable for any damages or implications caused by visiting any external links mentioned.
\n \n
<b>External Links</b>
        \n
Although this website only looks to include quality, safe and relevant external links, users are advised to adopt a policy of caution before clicking any external web links mentioned throughout this website. (External links are clickable text / banner / image links to other websites.)
\n \n
The owners of this website cannot guarantee or verify the contents of any externally linked website despite their best efforts. Users should therefore note they click on external links at their own risk and this website and its owners cannot be held liable for any damages or implications caused by visiting any external links mentioned.
\n \n
<b>Adverts and Sponsored Links</b>
        \n
This website may contain sponsored links and adverts. These will typically be served through our advertising partners, to whom may have detailed privacy policies relating directly to the adverts they serve.
\n \n
Clicking on any such adverts will send you to the advertisers website through a referral program which may use cookies and will track the number of referrals sent from this website. This may include the use of cookies which may in turn be saved on your computers hard drive. Users should therefore note they click on sponsored external links at their own risk and this website and its owners cannot be held liable for any damages or implications caused by visiting any external links mentioned.
\n \n
<b>Social Media Platforms</b>
        \n
Communication, engagement and actions taken through external social media platforms that this website and its owners participate on are custom to the terms and conditions as well as the privacy policies held with each social media platform respectively.
\n \n
Users are advised to use social media platforms wisely and communicate/engage upon them with due care and caution in regard to their own privacy and personal details. This website nor its owners will ever ask for personal or sensitive information through social media platforms and encourage users wishing to discuss sensitive details to contact them through primary communication channels such as by telephone or email.
\n \n
This website may use social sharing buttons which help share web content directly from web pages to the social media platform in question. Users are advised before using such social sharing buttons that they do so at their own discretion and note that the social media platform may track and save your request to share a web page respectively through your social media platform account.
\n \n
<b>Shortened Links in Social Media</b>
        \n
This website and its owners through their social media platform accounts may share web links to relevant web pages. By default some social media platforms shorten lengthy urls [web addresses]
\n \n
Users are advised to take caution and good judgement before clicking any shortened urls published on social media platforms by this website and its owners. Despite the best efforts to ensure only genuine urls are published many social media platforms are prone to spam and hacking and therefore this website and its owners cannot be held liable for any damages or implications caused by visiting any shortened links.
\n \n
    </string>
    <string name="legal1"><i>Policies</i> means a course or principle of action adopted or proposed by an organization or individual.
Policies are generally adopted by a governance body within an organization.
   \nBelow are the policies that govern PackBagBuddy and its users –

    </string>
    <string name="legal2">
        Terms and Conditions
    </string>
    <string name="legal3">
        Copyright Policy</string>
    <string name="legal4">Privacy Policy</string>
    <string name="legal5">
Cancellations and Refunds

    </string>
    <string name="legal_policies">Legal Policies</string>
</resources>