<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
android:scaleType="centerCrop"
                android:layout_height="140dp"
                android:src="@drawable/save" />

            <View
                android:id="@+id/View03"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_below="@id/t5"
                android:background="@color/darkgreen" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/green"
                android:orientation="vertical">
            <TextView
                android:id="@+id/legalPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:text="@string/legal_policies"
                android:textColor="@color/black"
                android:textSize="30sp"
                />
                <View

                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_below="@id/t5"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/orange" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textlegal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/legal1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:padding="20dp"
            android:background="@drawable/rectangle"
            android:fontFamily="sans-serif"
            android:text="@string/legal2"
            android:textColor="@color/teal_700"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_copyright_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/rectangle"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:padding="20dp"
            android:text="@string/legal3"
            android:textColor="@color/teal_700"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/legal4"
            android:textAlignment="center"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:textColor="@color/teal_700"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_cancellation_and_refund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/rectangle"
            android:text="@string/legal5"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:padding="20dp"
            android:textColor="@color/teal_700"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>