<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="600dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/layout_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Findus"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/find_us_button_layout"
            android:text="@string/find_us"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp" />


        <ImageView
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Findus"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/facebook_logo" />

        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Findus"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@id/facebook"
            android:text="@string/facebook"
            android:textColor="@color/darkgreen"
            android:textSize="30dp" />

        <View
            android:id="@+id/View1"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_below="@id/tv_facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/orange" />

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/View1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/instagram_logo" />

        <TextView
            android:id="@+id/tv_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/View1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@id/instagram"
            android:text="@string/instagram"
            android:textColor="@color/darkgreen"
            android:textSize="30dp" />

        <View
            android:id="@+id/View2"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_below="@id/tv_instagram"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/orange" />


        <ImageView
            android:id="@+id/twitter"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/View2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/twitter_logo" />

        <TextView
            android:id="@+id/tv_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/View2"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@id/twitter"
            android:text="@string/twitter"
            android:textColor="@color/darkgreen"
            android:textSize="30dp" />

        <View
            android:id="@+id/View3"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_below="@id/tv_twitter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/orange" />


        <ImageView
            android:id="@+id/Youtube"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/View3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/youtube_logo" />

        <TextView
            android:id="@+id/tv_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/View3"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@id/Youtube"
            android:text="@string/youtube"
            android:textColor="@color/darkgreen"
            android:textSize="30dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>